Proxy: wma.wmcloud.org

--- a/conf/wiki-sub.conf
+++ b/conf/wiki-sub.conf
@@ -4,6 +4,7 @@ subs_filter  (\.wiki(?:books|data|news|pedia|quote|versity|voyage)|\.?wikisource
 subs_filter  \/\/wikimedia\.org\/api\/rest_v1\/media\/math\/render\/(png|svg) //latex-$1.example.org ir;
 subs_filter  mapServer=mw\.config\.get\(('|\")wgKartographerMapServer\1\) mapServer=$1https://maps.example.org$1 r;
 subs_filter  phab\.wmfusercontent\.org phab.example.org ir;
+subs_filter  wma\.wmcloud\.org wma.example.org ir;
 ############bug fix
 subs_filter  (?:m\.www\.|www\.m\.)(mediawiki|wikidata)\.org m.$1.example.org r;
 subs_filter  '<img\s+?src="(https:)?\/\/(?:m\.www\.|www\.m\.)(mediawiki|wikidata)(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//m.$2.example.org$3$4"$5>' r;
