Fix: Text replacement RegExp

--- a/conf/wiki-sub.conf
+++ b/conf/wiki-sub.conf
@@ -8,9 +8,9 @@ subs_filter  wma\.wmcloud\.org wma.example.org ir;
 subs_filter  xtools\.wmflabs\.org\/api\/ xtools-api.example.org/ ir;
 ############bug fix
 subs_filter  (?:m\.www\.|www\.m\.)(mediawiki|wikidata)\.org m.$1.example.org r;
-subs_filter  '<img\s+?src="(https:)?\/\/(?:m\.www\.|www\.m\.)(mediawiki|wikidata)(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//m.$2.example.org$3$4"$5>' r;
-subs_filter  '<img\s+?src="(https:)?\/\/(m\.)?(\S+?)wikimedia(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//$3$2example.org$4$5"$6>' r;
-subs_filter  '<img\s+?src="(https:)?\/\/(m\.)?(\S+?)(wiki(?:books|data|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//$3$2$4.example.org$5$6"$7>' r;
+subs_filter  '<img\s+?src="(https:)?\/\/(?:m\.www\.|www\.m\.)(mediawiki|wikidata)\.org(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//m.$2.example.org$3$4"$5>' r;
+subs_filter  '<img\s+?src="(https:)?\/\/(m\.)?(\S+?)wikimedia\.org(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//$3$2example.org$4$5"$6>' r;
+subs_filter  '<img\s+?src="(https:)?\/\/(m\.)?(\S+?)(wiki(?:books|data|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)\.org(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//$3$2$4.example.org$5$6"$7>' r;
 subs_filter  '<img\s+?src="(https:)?\/\/m\.wikimedia\.org(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//foundation.m.example.org$2$3"$4>' r;
 subs_filter  '<img\s+?src="(https:)?\/\/www\.wikimedia\.org(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//foundation.example.org$2$3"$4>' r;
 subs_filter  '<img\s+?src="(https:)?\/\/(m\.|www\.)(wikidata\.example\.org\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//$2$3$4"$5>' r;
@@ -27,7 +27,7 @@ sub_filter  '            "mediawiki.org",' '            "example.org",\n        
 sub_filter  "request.open('GET',url,async);if(request.setRequestHeader)" "url=url.replace(/^(?:https?:)?(?:\/\/)?wikimedia\.org/,'//pageviews.example.org');url=url.match(/(.+?\.org)(.+)/)[1]+$fn(url.match(/(.+?\.org)(.+)/)[2]);request.open('GET',url,async);if(request.setRequestHeader)";
 sub_filter  "  request.open('GET', url, async);" "  url = url.replace(/^(?:https?:)?(?:\/\/)?wikimedia\.org/, '//pageviews.example.org');\n  url = url.match(/(.+?\.org)(.+)/)[1] + $fn(url.match(/(.+?\.org)(.+)/)[2]);\n  request.open('GET', url, async);";
 sub_filter  "'url': buildURI(ajax, {}) " "'url': ((url = buildURI(ajax, {})) => {\n				url.host = 'pageviews.example.org';\n				return url\n			})()\n		";
-sub_filter  "(\\\.wiki(?:books|data|news|pedia|quote|source|versity|voyage)|\\\.wiktionary|\\\.mediawiki)\\\.org" "$1\.(?:example\.)?org";
+sub_filter  "\.wikipedia\.org" "\.wikipedia\.(?:example\.)?org";
 sub_filter  '"ext.gadget.mirrorsite",' "";
 
 sub_filter_once    off;
