Feature: Transparentize client Accept header

--- a/conf/wiki.conf
+++ b/conf/wiki.conf
@@ -79,6 +79,7 @@ proxy_redirect  https://$subdomain.planet.wikimedia.org/ https://$subdomain.plan
 proxy_redirect  ~^https?:\/\/([0-9a-z-][^.]+)\.planet\.wikimedia\.org(\/?(?:\S*?))$ https://$1.planet.example.org$2;
 proxy_redirect  ~^https?:\/\/([0-9a-z-][^.]*(?:\.m)?)\.(wiki(?:books|data|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)\.org(\/?(?:\S*?))$ https://$1.$2.example.org$3;
 
+proxy_set_header  Accept $http_accept;
 proxy_set_header  Accept-Language $http_accept_language;
 proxy_set_header  User-Agent $http_user_agent;
 proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
