Proxy: Masking analysis service

--- a/conf/wiki-location-main.conf
+++ b/conf/wiki-location-main.conf
@@ -6,9 +6,6 @@ location / {
     proxy_set_header  Host $subdomain.$hostdomain.org;
     proxy_set_header  Referer https://$subdomain.$hostdomain.org$request_uri;
 }
-location /beacon/event {
-    return 204;
-}
-location /beacon/statsv {
+location /beacon {
     return 204;
 }
