--- a/conf/wiki-location-api.conf
+++ b/conf/wiki-location-api.conf
@@ -1,40 +1,36 @@
 location /api/rest_v1 {
-    more_set_headers   "Access-Control-Allow-Credentials: true" "Access-Control-Allow-Origin: $http_origin";
+    more_set_headers   "Access-Control-Allow-Origin: $http_origin";
     include            /path/to/wikimirror/conf/wiki-sub.conf;
     include            /path/to/wikimirror/conf/wiki.conf;
     proxy_pass         https://wiki-IPAddress;
-    proxy_hide_header  access-control-allow-credentials;
     proxy_hide_header  access-control-allow-origin;
     proxy_set_header   Accept-Encoding "";
     proxy_set_header   Host $subdomain.$hostdomain.org;
     proxy_set_header   Referer https://$subdomain.$hostdomain.org$request_uri;
 }
 location /api/rest_v1/page/pdf {
-    more_set_headers   "Access-Control-Allow-Credentials: true" "Access-Control-Allow-Origin: $http_origin";
+    more_set_headers   "Access-Control-Allow-Origin: $http_origin";
     include            /path/to/wikimirror/conf/wiki.conf;
     proxy_pass         https://wiki-IPAddress;
-    proxy_hide_header  access-control-allow-credentials;
     proxy_hide_header  access-control-allow-origin;
     proxy_set_header   Host $subdomain.$hostdomain.org;
     proxy_set_header   Referer https://$subdomain.$hostdomain.org$request_uri;
 }
 location /w/api.php {
-    more_set_headers   "Access-Control-Allow-Credentials: true" "Access-Control-Allow-Origin: $http_origin";
+    more_set_headers   "Access-Control-Allow-Origin: $http_origin";
     include            /path/to/wikimirror/conf/wiki-sub.conf;
     include            /path/to/wikimirror/conf/wiki.conf;
     proxy_pass         https://wiki-IPAddress/w/api.php;
-    proxy_hide_header  access-control-allow-credentials;
     proxy_hide_header  access-control-allow-origin;
     proxy_set_header   Accept-Encoding "";
     proxy_set_header   Host $subdomain.$hostdomain.org;
     proxy_set_header   Referer https://$subdomain.$hostdomain.org$request_uri;
 }
 location /w/index.php {
-    more_set_headers   "Access-Control-Allow-Credentials: true" "Access-Control-Allow-Origin: $http_origin";
+    more_set_headers   "Access-Control-Allow-Origin: $http_origin";
     include            /path/to/wikimirror/conf/wiki-sub.conf;
     include            /path/to/wikimirror/conf/wiki.conf;
     proxy_pass         https://wiki-IPAddress/w/index.php;
-    proxy_hide_header  access-control-allow-credentials;
     proxy_hide_header  access-control-allow-origin;
     proxy_set_header   Accept-Encoding "";
     proxy_set_header   Host $subdomain.$hostdomain.org;
