--- a/conf/wiki-sub.conf
+++ b/conf/wiki-sub.conf
@@ -4,6 +4,7 @@ subs_filter  (\.wiki(?:books|data|news|pedia|quote|versity|voyage)|\.?wikisource
 subs_filter  \/\/wikimedia\.org\/api\/rest_v1\/media\/math\/render\/(png|svg) //latex-$1.example.org ir;
 subs_filter  mapServer=mw\.config\.get\(('|\")wgKartographerMapServer\1\) mapServer=$1https://maps.example.org$1 r;
 subs_filter  phab\.wmfusercontent\.org phab.example.org ir;
+subs_filter  recommend\.wmflabs\.org recommend.wikimirror.net ir;
 subs_filter  wma\.wmcloud\.org wma.example.org ir;
 subs_filter  xtools\.wmflabs\.org\/api\/ xtools-api.example.org/ ir;
 ############bug fix
