--- a/conf/wiki-site-ssl.conf
+++ b/conf/wiki-site-ssl.conf
@@ -4,9 +4,9 @@ ssl_certificate          /path/to/fullchain.crt;
 ssl_certificate_key      /path/to/key;
 ssl_trusted_certificate  /path/to/fullchain.crt;
 
-add_header  Strict-Transport-Security "max-age=31536000; includeSubdomains; preload" always;
-add_header  X-Content-Type-Options nosniff always;
-add_header  X-Xss-Protection "1; mode=block" always;
+more_set_headers  "Strict-Transport-Security: max-age=31536000; includeSubdomains; preload";
+more_set_headers  "X-Content-Type-Options: nosniff";
+more_set_headers  "X-Xss-Protection: 1; mode=block";
 
 client_max_body_size  0;
 
