--- a/conf/wiki.conf
+++ b/conf/wiki.conf
@@ -3,7 +3,6 @@ proxy_cookie_domain  ~(?<subcookie>(wiki(?:books|data|news|pedia|quote|source|ve
 proxy_cookie_domain  phab.wmfusercontent.org phab.example.org;
 proxy_cookie_domain  wma.wmcloud.org wma.example.org;
 
-proxy_hide_header  accept-ch;
 proxy_hide_header  age;
 proxy_hide_header  backend-timing;
 proxy_hide_header  content-location;
@@ -11,6 +10,7 @@ proxy_hide_header  content-security-policy;
 proxy_hide_header  content-security-policy-report-only;
 proxy_hide_header  host-header;
 proxy_hide_header  link;
+proxy_hide_header  mediawiki-cors-rejection;
 proxy_hide_header  nel;
 proxy_hide_header  p3p;
 proxy_hide_header  permissions-policy;
@@ -20,7 +20,6 @@ proxy_hide_header  report-to;
 proxy_hide_header  server-timing;
 proxy_hide_header  strict-transport-security;
 proxy_hide_header  timing-allow-origin;
-proxy_hide_header  vary;
 proxy_hide_header  x-analytics;
 proxy_hide_header  x-ats-timestamp;
 proxy_hide_header  x-cache;
