--- a/conf/wiki-location-main.conf
+++ b/conf/wiki-location-main.conf
@@ -1,10 +1,14 @@
 location / {
-    include           /path/to/wikimirror/conf/wiki-sub.conf;
-    include           /path/to/wikimirror/conf/wiki.conf;
-    proxy_pass        https://wiki-IPAddress;
-    proxy_set_header  Accept-Encoding "";
-    proxy_set_header  Host $subdomain.$hostdomain.org;
-    proxy_set_header  Referer https://$subdomain.$hostdomain.org$request_uri;
+    if ($http_origin != "") {
+        more_set_headers  "Access-Control-Allow-Headers: $http_access_control_request_headers";
+    }
+    include            /path/to/wikimirror/conf/wiki-sub.conf;
+    include            /path/to/wikimirror/conf/wiki.conf;
+    proxy_pass         https://wiki-IPAddress;
+    proxy_hide_header  access-control-allow-headers;
+    proxy_set_header   Accept-Encoding "";
+    proxy_set_header   Host $subdomain.$hostdomain.org;
+    proxy_set_header   Referer https://$subdomain.$hostdomain.org$request_uri;
 }
 location /beacon {
     return 204;
