--- a/conf/wiki-site-http.conf
+++ b/conf/wiki-site-http.conf
@@ -1,6 +1,6 @@
-add_header  X-Content-Type-Options nosniff always;
-add_header  X-Frame-Options sameorigin always;
-add_header  X-Xss-Protection "1; mode=block" always;
+more_set_headers  "X-Content-Type-Options: nosniff";
+more_set_headers  "X-Frame-Options: SAMEORIGIN";
+more_set_headers  'X-Xss-Protection: "1; mode=block"';
 
 if ($http_user_agent ~* "Bot|Spider|Barkrowler|BingPreview|Feedfetcher-Google|ia_archiver|libwww-perl|MBCrawler|Mediapartners-Google|MSNot-media|Python|Teoma|Yahoo! Slurp|^$") {
     return 444;
