Feature: Cover origin Access-Control-Allow-Methods header

--- a/conf/wiki-location-main.conf
+++ b/conf/wiki-location-main.conf
@@ -1,11 +1,12 @@
 location / {
     if ($http_origin != "") {
-        more_set_headers  "Access-Control-Allow-Headers: $http_access_control_request_headers";
+        more_set_headers  "Access-Control-Allow-Headers: $http_access_control_request_headers" "Access-Control-Allow-Methods: GET, HEAD, POST";
     }
     include            /path/to/wikimirror/conf/wiki-sub.conf;
     include            /path/to/wikimirror/conf/wiki.conf;
     proxy_pass         https://wiki-IPAddress;
     proxy_hide_header  access-control-allow-headers;
+    proxy_hide_header  access-control-allow-methods;
     proxy_set_header   Accept-Encoding "";
     proxy_set_header   Host $subdomain.$hostdomain.org;
     proxy_set_header   Referer https://$subdomain.$hostdomain.org$request_uri;
