Improve: Follow up on task T335086

--- a/conf/wiki-sub.conf
+++ b/conf/wiki-sub.conf
@@ -6,6 +6,7 @@ subs_filter  mapServer=mw\.config\.get\(('|\")wgKartographerMapServer\1\) mapSer
 subs_filter  phab\.wmfusercontent\.org phab.example.org ir;
 subs_filter  recommend\.wmflabs\.org recommend.wikimirror.net ir;
 subs_filter  wma\.wmcloud\.org wma.example.org ir;
+subs_filter  xtools\.wmcloud\.org\/api\/ xtools-api.example.org/ ir;
 subs_filter  xtools\.wmflabs\.org\/api\/ xtools-api.example.org/ ir;
 ############bug fix
 subs_filter  (?:m\.www\.|www\.m\.)(mediawiki|wikidata)\.org m.$1.example.org r;
