Improve: HTTP/2 recommended configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,5 +30,7 @@ http {
         ssl_stapling               on;
         ssl_stapling_verify        on;
 
+        # http2  on; # 需要Nginx >= 1.25.1
+
         include  /path/to/wikimirror/conf/wiki.nginx;
 }
