--- a/conf/wiki-sub.conf
+++ b/conf/wiki-sub.conf
@@ -1,13 +1,10 @@
 ###################
 subs_filter  (advisors(?:\.m)?|advisory(?:\.m)?|affcom|am(?:\.m)?|analytics|annual|api(?:\.m)?|ar(?:\.m)?|auditcom|bd(?:\.m)?|be(?:\.m)?|blog|board|boardgovcom|br(?:\.m)?|bugzilla|ca(?:\.m)?|chair|checkuser(?:\.m)?|cn(?:\.m)?|co(?:\.m)?|collab|(?:test-)?commons(?:\.m)?|config-master|cxserver|dbtree|design|developer|diff|dk(?:\.m)?|doc|ec(?:\.m)?|ee(?:\.m)?|electcom(?:\.m)?|etherpad|exec(?:\.m)?|fdc(?:\.m)?|fi(?:\.m)?|foundation(?:\.m)?|ge(?:\.m)?|gerrit|gitlab|gr(?:\.m)?|grafana|grants(?:\.m)?|graphite|hi(?:\.m)?|horizon|id(?:\.m)?|id-internal(?:\.m)?|idp|iegcom(?:\.m)?|il|incubator(?:\.m)?|intake-(?:analytics|logging)|integration|internal|labtestwikitech|legalteam(?:\.m)?|\/\/lists|login(?:\.m)?|logstash|mai(?:\.m)?|maps|meta(?:\.m)?|mk(?:\.m)?|movementroles|mx(?:\.m)?|ng(?:\.m)?|nl(?:\.m)?|no(?:\.m)?|noboard-chapters|noc|nyc(?:\.m)?|nz(?:\.m)?|office(?:\.m)?|ombuds(?:\.m)?|ombudsmen|ores|otrs-wiki(?:\.m)?|outreach(?:\.m)?|pa-us(?:\.m)?|people|performance|phabricator|pl(?:\.m)?|planet|policy|projectcom|pt(?:\.m)?|punjabi(?:\.m)?|quality(?:\.m)?|research|romd(?:\.m)?|rs(?:\.m)?|rt|ru(?:\.m)?|schema|se(?:\.m)?|searchcom|secure|spcom|species(?:\.m)?|static-(?:bugzilla|codereview)|steward(?:\.m)?|strategy(?:\.m)?|stream|svn|techblog|techconduct|ticket|toolsadmin|tr(?:\.m)?|transitionteam(?:\.m)?|transparency|ua(?:\.m)?|upload|usability|vote(?:\.m)?|vrt-wiki(?:\.m)?|wb(?:\.m)?|wikimania(?:200[5-9]|201[0-8]|team)?(?:\.m)?|wikitech(?:-static)?|www)\.wikimedia\.org $1.example.org ir;
 subs_filter  (\.wiki(?:books|data|news|pedia|quote|versity|voyage)|\.?wikisource|\.wiktionary|\.mediawiki)\.org $1.example.org ir;
-subs_filter  \/\/wikimedia\.org\/api\/rest_v1\/media\/math\/render\/(png|svg) //latex-$1.example.org ir;
+subs_filter  \/\/wikimedia\.org\/api\/rest_v1\/media\/math\/render\/(png|svg) //latex-$1.example.org ir; #Extension:Kartographer
 subs_filter  mapServer=mw\.config\.get\(('|\")wgKartographerMapServer\1\) mapServer=$1https://maps.example.org$1 r;
 subs_filter  phab\.wmfusercontent\.org phab.example.org ir;
-subs_filter  recommend\.wmflabs\.org recommend.wikimirror.net ir;
 subs_filter  wma\.wmcloud\.org wma.example.org ir;
-subs_filter  xtools\.wmcloud\.org\/api\/ xtools-api.example.org/ ir;
-subs_filter  xtools\.wmflabs\.org\/api\/ xtools-api.example.org/ ir;
 ############bug fix
 subs_filter  (?:m\.www\.|www\.m\.)(mediawiki|wikidata)\.org m.$1.example.org r;
 subs_filter  '<img\s+?src="(https:)?\/\/(?:m\.www\.|www\.m\.)(mediawiki|wikidata)\.org(\/wiki\/Special:CentralAutoLogin)(\S+?)"(.+?)>' '<img src="$1//m.$2.example.org$3$4"$5>' r;
@@ -23,14 +20,9 @@ subs_filter  '(<meta\scharset="?\S+?"?\s*?\/?>)(?!(?:<meta\sproperty.+?>|<meta\s
 subs_filter  '(<meta\shttp-equiv="?Content-Type"?\scontent="?.+?"?\s*?\/?>)(?!<meta\sproperty.+?>)' "$init$1" ir;
 subs_filter  "<code>Request\sfrom\s((?:(?:1[0-9][0-9]\.)|(?:2[0-4][0-9]\.)|(?:25[0-5]\.)|(?:[1-9][0-9]\.)|(?:[0-9]\.)){3}(?:(?:1[0-9][0-9])|(?:2[0-4][0-9])|(?:25[0-5])|(?:[1-9][0-9])|(?:[0-9])))(.+?)" "<code>Request from $remote_addr$2<br>Reverse proxy: example.org ($1) " r;
 ###################
-set         $fn "WikiMirror.getRealText";
 sub_filter  '"https":["mediawiki.org",' '"https":["example.org","mediawiki.org",'; #wgGraphAllowedDomains
 sub_filter  '            "mediawiki.org",' '            "example.org",\n            "mediawiki.org",'; #wgGraphAllowedDomains
-sub_filter  "request.open('GET',url,async);if(request.setRequestHeader)" "url=url.replace(/^(?:https?:)?(?:\/\/)?wikimedia\.org/,'//pageviews.example.org');url=url.match(/(.+?\.org)(.+)/)[1]+$fn(url.match(/(.+?\.org)(.+)/)[2]);request.open('GET',url,async);if(request.setRequestHeader)";
-sub_filter  "  request.open('GET', url, async);" "  url = url.replace(/^(?:https?:)?(?:\/\/)?wikimedia\.org/, '//pageviews.example.org');\n  url = url.match(/(.+?\.org)(.+)/)[1] + $fn(url.match(/(.+?\.org)(.+)/)[2]);\n  request.open('GET', url, async);";
-sub_filter  "'url': buildURI(ajax, {}) " "'url': ((url = buildURI(ajax, {})) => {\n				url.host = 'pageviews.example.org';\n				return url\n			})()\n		";
 sub_filter  "\.wikipedia\.org" "\.wikipedia\.(?:example\.)?org";
-sub_filter  '"ext.gadget.mirrorsite",' "";
 
 sub_filter_once    off;
 sub_filter_types   *;
