Improve: Hook the return value of mw.config.get in the frontend

--- a/conf/wiki-sub.conf
+++ b/conf/wiki-sub.conf
@@ -1,8 +1,7 @@
 ###################
 subs_filter  (advisors(?:\.m)?|advisory(?:\.m)?|affcom|am(?:\.m)?|analytics|annual|api(?:\.m)?|ar(?:\.m)?|auditcom|bd(?:\.m)?|be(?:\.m)?|blog|board|boardgovcom|br(?:\.m)?|bugzilla|ca(?:\.m)?|chair|checkuser(?:\.m)?|cn(?:\.m)?|co(?:\.m)?|collab|(?:test-)?commons(?:\.m)?|config-master|cxserver|dbtree|design|developer|diff|dk(?:\.m)?|doc|ec(?:\.m)?|ee(?:\.m)?|electcom(?:\.m)?|etherpad|exec(?:\.m)?|fdc(?:\.m)?|fi(?:\.m)?|foundation(?:\.m)?|ge(?:\.m)?|gerrit|gitlab|gr(?:\.m)?|grafana|grants(?:\.m)?|graphite|hi(?:\.m)?|horizon|id(?:\.m)?|id-internal(?:\.m)?|idp|iegcom(?:\.m)?|il|incubator(?:\.m)?|intake-(?:analytics|logging)|integration|internal|labtestwikitech|legalteam(?:\.m)?|\/\/lists|login(?:\.m)?|logstash|mai(?:\.m)?|maps|meta(?:\.m)?|mk(?:\.m)?|movementroles|mx(?:\.m)?|ng(?:\.m)?|nl(?:\.m)?|no(?:\.m)?|noboard-chapters|noc|nyc(?:\.m)?|nz(?:\.m)?|office(?:\.m)?|ombuds(?:\.m)?|ombudsmen|ores|otrs-wiki(?:\.m)?|outreach(?:\.m)?|pa-us(?:\.m)?|people|performance|phabricator|pl(?:\.m)?|planet|policy|projectcom|pt(?:\.m)?|punjabi(?:\.m)?|quality(?:\.m)?|research|romd(?:\.m)?|rs(?:\.m)?|rt|ru(?:\.m)?|schema|se(?:\.m)?|searchcom|secure|spcom|species(?:\.m)?|static-(?:bugzilla|codereview)|steward(?:\.m)?|strategy(?:\.m)?|stream|svn|techblog|techconduct|ticket|toolsadmin|tr(?:\.m)?|transitionteam(?:\.m)?|transparency|ua(?:\.m)?|upload|usability|vote(?:\.m)?|vrt-wiki(?:\.m)?|wb(?:\.m)?|wikimania(?:200[5-9]|201[0-8]|team)?(?:\.m)?|wikitech(?:-static)?|www)\.wikimedia\.org $1.example.org ir;
 subs_filter  (\.wiki(?:books|data|news|pedia|quote|versity|voyage)|\.?wikisource|\.wiktionary|\.mediawiki)\.org $1.example.org ir;
-subs_filter  \/\/wikimedia\.org\/api\/rest_v1\/media\/math\/render\/(png|svg) //latex-$1.example.org ir; #Extension:Kartographer
-subs_filter  mapServer=mw\.config\.get\(('|\")wgKartographerMapServer\1\) mapServer=$1https://maps.example.org$1 r;
+subs_filter  \/\/wikimedia\.org\/api\/rest_v1\/media\/math\/render\/(png|svg) //latex-$1.example.org ir;
 subs_filter  phab\.wmfusercontent\.org phab.example.org ir;
 subs_filter  wma\.wmcloud\.org wma.example.org ir;
 ############bug fix
@@ -20,8 +19,6 @@ subs_filter  '(<meta\scharset="?\S+?"?\s*?\/?>)(?!(?:<meta\sproperty.+?>|<meta\s
 subs_filter  '(<meta\shttp-equiv="?Content-Type"?\scontent="?.+?"?\s*?\/?>)(?!<meta\sproperty.+?>)' "$init$1" ir;
 subs_filter  "<code>Request\sfrom\s((?:(?:1[0-9][0-9]\.)|(?:2[0-4][0-9]\.)|(?:25[0-5]\.)|(?:[1-9][0-9]\.)|(?:[0-9]\.)){3}(?:(?:1[0-9][0-9])|(?:2[0-4][0-9])|(?:25[0-5])|(?:[1-9][0-9])|(?:[0-9])))(.+?)" "<code>Request from $remote_addr$2<br>Reverse proxy: example.org ($1) " r;
 ###################
-sub_filter  '"https":["mediawiki.org",' '"https":["example.org","mediawiki.org",'; #wgGraphAllowedDomains
-sub_filter  '            "mediawiki.org",' '            "example.org",\n            "mediawiki.org",'; #wgGraphAllowedDomains
 sub_filter  "\.wikipedia\.org" "\.wikipedia\.(?:example\.)?org";
 
 sub_filter_once    off;
