--- a/conf/wiki.conf
+++ b/conf/wiki.conf
@@ -1,5 +1,6 @@
+proxy_cookie_domain  wikimediafoundation.org wikimediafoundation.example.org;
 proxy_cookie_domain  ~(?<subcookie>(advisors(?:\.m)?|advisory(?:\.m)?|affcom|am(?:\.m)?|analytics|annual|api(?:\.m)?|ar(?:\.m)?|auditcom|bd(?:\.m)?|be(?:\.m)?|blog|board|boardgovcom|br(?:\.m)?|bugzilla|ca(?:\.m)?|chair|checkuser(?:\.m)?|cn(?:\.m)?|co(?:\.m)?|collab|(?:test-)?commons(?:\.m)?|config-master|cxserver|dbtree|design|developer|diff|dk(?:\.m)?|doc|ec(?:\.m)?|ee(?:\.m)?|electcom(?:\.m)?|etherpad|exec(?:\.m)?|fdc(?:\.m)?|fi(?:\.m)?|foundation(?:\.m)?|ge(?:\.m)?|gerrit|github|gr(?:\.m)?|grafana|grants(?:\.m)?|graphite|hi(?:\.m)?|horizon|id(?:\.m)?|id-internal(?:\.m)?|idp|iegcom(?:\.m)?|il|incubator(?:\.m)?|integration|internal|labtestwikitech|legalteam(?:\.m)?|lists|login(?:\.m)?|logstash|mai(?:\.m)?|maps|meta(?:\.m)?|mk(?:\.m)?|movementroles|mx(?:\.m)?|ng(?:\.m)?|nl(?:\.m)?|no(?:\.m)?|noboard-chapters|noc|nyc(?:\.m)?|nz(?:\.m)?|office(?:\.m)?|ombuds(?:\.m)?|ombudsmen|ores|otrs-wiki(?:\.m)?|outreach(?:\.m)?|pa-us(?:\.m)?|people|performance|phabricator|pl(?:\.m)?|planet|policy|projectcom|pt(?:\.m)?|punjabi(?:\.m)?|quality(?:\.m)?|research|romd(?:\.m)?|rs(?:\.m)?|rt|ru(?:\.m)?|se(?:\.m)?|schema|searchcom|secure|spcom|species(?:\.m)?|static-(?:bugzilla|codereview)|steward(?:\.m)?|strategy(?:\.m)?|stream|svn|techblog|techconduct|ticket|toolsadmin|tr(?:\.m)?|transitionteam(?:\.m)?|transparency|ua(?:\.m)?|upload|usability|vote(?:\.m)?|vrt-wiki(?:\.m)?|wb(?:\.m)?|wikimania(?:200[5-9]|201[0-8]|team)?(?:\.m)?|wikitech(?:-static)?|www)\.)?wikimedia\.org$ ${subcookie}example.org;
-proxy_cookie_domain  ~(?<subcookie>(wiki(?:books|data|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)\.)org$ ${subcookie}example.org;
+proxy_cookie_domain  ~(?<subcookie>(wiki(?:books|data|functions|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)\.)org$ ${subcookie}example.org;
 proxy_cookie_domain  phab.wmfusercontent.org phab.example.org;
 proxy_cookie_domain  wma.wmcloud.org wma.example.org;
 
@@ -50,14 +51,15 @@ proxy_hide_header  xkey;
 
 proxy_pass_header  server;
 
-proxy_redirect  https://www.m.mediawiki.org/ https://m.mediawiki.example.org/;
-proxy_redirect  https://www.m.wikidata.org/ https://m.wikidata.example.org/;
+proxy_redirect  ~^https?:\/\/www\.m\.(wiki(?:data|functions)|mediawiki)\.org\/$ https://m.$1.example.org/;
 proxy_redirect  ~^https?:\/\/(m\.)?wikisource\.org(\/?(?:\S*?))$ https://$1wikisource.example.org$2;
 proxy_redirect  ~^https?:\/\/(advisors(?:\.m)?|advisory(?:\.m)?|affcom|am(?:\.m)?|analytics|annual|api(?:\.m)?|ar(?:\.m)?|auditcom|bd(?:\.m)?|be(?:\.m)?|blog|board|boardgovcom|br(?:\.m)?|bugzilla|ca(?:\.m)?|chair|checkuser(?:\.m)?|cn(?:\.m)?|co(?:\.m)?|collab|(?:test-)?commons(?:\.m)?|config-master|cxserver|dbtree|design|developer|diff|dk(?:\.m)?|doc|ec(?:\.m)?|ee(?:\.m)?|electcom(?:\.m)?|etherpad|exec(?:\.m)?|fdc(?:\.m)?|fi(?:\.m)?|foundation(?:\.m)?|ge(?:\.m)?|gerrit|gitlab|gr(?:\.m)?|grafana|grants(?:\.m)?|graphite|hi(?:\.m)?|horizon|id(?:\.m)?|id-internal(?:\.m)?|idp|iegcom(?:\.m)?|il|incubator(?:\.m)?|intake-(?:analytics|logging)|integration|internal|labtestwikitech|legalteam(?:\.m)?|lists|login(?:\.m)?|logstash|mai(?:\.m)?|maps|meta(?:\.m)?|mk(?:\.m)?|movementroles|mx(?:\.m)?|ng(?:\.m)?|nl(?:\.m)?|no(?:\.m)?|noboard-chapters|noc|nyc(?:\.m)?|nz(?:\.m)?|office(?:\.m)?|ombuds(?:\.m)?|ombudsmen|ores|otrs-wiki(?:\.m)?|outreach(?:\.m)?|pa-us(?:\.m)?|people|performance|phabricator|piwik|pl(?:\.m)?|planet|policy|projectcom|pt(?:\.m)?|punjabi(?:\.m)?|quality(?:\.m)?|research|romd(?:\.m)?|rs(?:\.m)?|rt|ru(?:\.m)?|se(?:\.m)?|schema|searchcom|secure|spcom|species(?:\.m)?|static-(?:bugzilla|codereview)|steward(?:\.m)?|strategy(?:\.m)?|stream|svn|techblog|techconduct|ticket|toolsadmin|tr(?:\.m)?|transitionteam(?:\.m)?|transparency|ua(?:\.m)?|upload|usability|vote(?:\.m)?|vrt-wiki(?:\.m)?|wb(?:\.m)?|wikimania(?:200[5-9]|201[0-8]|team)?(?:\.m)?|wikitech(?:-static)?|www)\.wikimedia\.org(\/?(?:\S*?))$ https://$1.example.org$2;
+proxy_redirect  ~^https?:\/\/wikimediafoundation\.org(\/?(?:\S*?))$ https://wikimediafoundation.example.org$1;
 proxy_redirect  https://$subdomain.wikibooks.org/ https://$subdomain.wikibooks.example.org/;
 proxy_redirect  https://$subdomain.m.wikibooks.org/ https://$subdomain.m.wikibooks.example.org/;
 proxy_redirect  https://$subdomain.wikidata.org/ https://$subdomain.wikidata.example.org/;
 proxy_redirect  https://$subdomain.m.wikidata.org/ https://$subdomain.m.wikidata.example.org/;
+proxy_redirect  https://$subdomain.wikifunctions.org/ https://$subdomain.wikifunctions.example.org/;
 proxy_redirect  https://$subdomain.wikinews.org/ https://$subdomain.wikinews.example.org/;
 proxy_redirect  https://$subdomain.m.wikinews.org/ https://$subdomain.m.wikinews.example.org/;
 proxy_redirect  https://$subdomain.wikipedia.org/ https://$subdomain.wikipedia.example.org/;
@@ -74,8 +76,10 @@ proxy_redirect  https://$subdomain.wikivoyage.org/ https://$subdomain.wikivoyage
 proxy_redirect  https://$subdomain.m.wikivoyage.org/ https://$subdomain.m.wikivoyage.example.org/;
 proxy_redirect  https://$subdomain.mediawiki.org/ https://$subdomain.mediawiki.example.org/;
 proxy_redirect  https://$subdomain.planet.wikimedia.org/ https://$subdomain.planet.example.org/;
+proxy_redirect  https://$subdomain.wikimediafoundation.org/ https://$subdomain.wikimediafoundation.example.org/;
+proxy_redirect  ~^https?:\/\/([0-9a-z-][^.]*(?:\.m)?)\.(wiki(?:books|data|functions|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)\.org(\/?(?:\S*?))$ https://$1.$2.example.org$3;
 proxy_redirect  ~^https?:\/\/([0-9a-z-][^.]+)\.planet\.wikimedia\.org(\/?(?:\S*?))$ https://$1.planet.example.org$2;
-proxy_redirect  ~^https?:\/\/([0-9a-z-][^.]*(?:\.m)?)\.(wiki(?:books|data|news|pedia|quote|source|versity|voyage)|wiktionary|mediawiki)\.org(\/?(?:\S*?))$ https://$1.$2.example.org$3;
+proxy_redirect  ~^https?:\/\/([0-9a-z-][^.]+)\.wikimediafoundation\.org(\/?(?:\S*?))$ https://$1.wikimediafoundation.example.org$2;
 
 proxy_set_header  Accept $http_accept;
 proxy_set_header  Accept-Language $http_accept_language;
