Feature: Source map support

--- a/conf/wiki-location-static.conf
+++ b/conf/wiki-location-static.conf
@@ -5,7 +5,15 @@ location = /robots.txt {
 location = /wikimirror.css {
     index  wikimirror.css;
 }
+location = /wikimirror.css.map {
+    more_set_headers  "Cache-Control: no-cache";
+    index             wikimirror.css.map;
+}
 location = /wikimirror.js {
     more_set_headers  "Cache-Control: no-cache";
     index             wikimirror.js;
+}
+location = /wikimirror.js.map {
+    more_set_headers  "Cache-Control: no-cache";
+    index             wikimirror.js.map;
 }
